--- a/index.html
+++ b/index.html
@@ -15,13 +15,24 @@
   <title>Marlene's profile</title>
 </head>
 
-<body>
-  <div class= "bg"></div>
-  <div class="jumbotron text-left text-bold text-black " style="margin-bottom:0">
-    <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded-circle" alt="">
-    <h1> Marléne
-      Eddie </h1>
+<body id="fullsupport">
+
+  <!--<div class="jumbotron text-left text-bold text-black " style="margin-bottom:0">
+    <h1 class="text-white"> <img src="images/Professional photo - M Eddie.jpg" class="img rounded-circle" alt="Me" id="myPhoto"> Marléne Eddie </h1>
+  </div>-->
+
+  <div id="jumbo" class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3">
+        <img src="images/Professional photo - M Eddie.jpg" class="img rounded-circle" alt="Me" id="myPhoto">
+      </div>
+      <div class="col-lg-6">
+        <h1 id="name" class="text-white">  Marléne Eddie </h1>
+      </div>
+    </div>
   </div>
+
+
   <nav class="navbar navbar-light bg-light">
     <span class="navbar-text">
       Please follow the links for more information:
@@ -47,7 +58,7 @@
 
 
   <div class="container-fluid">
-    
+
     <div class="row">
       <div class="col-lg-3" id="myScrollspy">
         <ul class="nav nav-pills flex-column">
@@ -61,119 +72,119 @@
             <a class="nav-link active" href="#section3">Interesting Projects</a>
           </li>
         </ul>
-      </div>  
+      </div>
       <!-- <div class="col-lg-3 invisible">filler text</div> -->
       <div class="col-sm-9 col-8">
-        <div  data-spy="scroll" data-target="#myScrollspy" data-offset="1">
-        <div id="section1">
-          <br>
-          <br>
-          <h1>About Me</h1>
-          <p>I am an energetic, detail oriented person who takes responsibility and sees a task through.
-            As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various
-            fields.
-          </p>
-          <p> I am currently part of the BriteHouse 2.0 Graduate program.
-          </p>
-        </div>
-        <div id="section2">
-          <br>
-          <br>
-          <h1>Education</h1>
-          <p></p>
-          <p></p>
-          <div class="card-deck">
-            <div class="card">
-              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Tertiary Education</h4>
-                <p class="card-text">2019</p>
-                <p> Bachelor of Engineering in Industrial Engineering</p>
-                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+        <div data-spy="scroll" data-target="#myScrollspy" data-offset="1">
+          <div id="section1">
+            <br>
+            <br>
+            <h1>About Me</h1>
+            <p>I am an energetic, detail oriented person who takes responsibility and sees a task through.
+              As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various
+              fields.
+            </p>
+            <p> I am currently part of the BriteHouse 2.0 Graduate program.
+            </p>
+          </div>
+          <div id="section2">
+            <br>
+            <br>
+            <h1>Education</h1>
+            <p></p>
+            <p></p>
+            <div class="card-deck">
+              <div class="card">
+                <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Tertiary Education</h4>
+                  <p class="card-text">2019</p>
+                  <p> Bachelor of Engineering in Industrial Engineering</p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+
+              <div class="card">
+                <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Short Course</h4>
+                  <p class="card-text">2019</p>
+                  <p> E-mobilty Monitoring and Telemetry Systems Training</p>
+                  <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+
+              <div class="card">
+                <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Short Course</h4>
+                  <p class="card-text">2019</p>
+                  <p> Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
+                  <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="images/Helpmekaar kollege logo.jpg" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">High School</h4>
+                  <p class="card-text">2014</p>
+                  <p> Matric</p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
               </div>
             </div>
 
-            <div class="card">
-              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Short Course</h4>
-                <p class="card-text">2019</p>
-                <p> E-mobilty Monitoring and Telemetry Systems Training</p>
-                <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-              </div>
-            </div>
 
-            <div class="card">
-              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Short Course</h4>
-                <p class="card-text">2019</p>
-                <p> Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
-                <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="images/Helpmekaar kollege logo.jpg" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">High School</h4>
-                <p class="card-text">2014</p>
-                <p> Matric</p>
-                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-              </div>
-            </div>
           </div>
 
-          
-        </div>
-
-        <div id="section3">
-          <br>
-          <br>
-          <h1>Interesting Projects</h1>
-          <p></p>
-          <div class="card-deck">
-            <div class="card">
-              <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
-                <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a>
-              <div id="uni" class="card-body collapse">
-                <h4 class="card-title">Final Year Project</h4>
-                <p class="card-text">2019</p>
-                <p> My final year project was to solve the root cause of unbalanced production flow.
-                  <br>
-                  The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
-                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+          <div id="section3">
+            <br>
+            <br>
+            <h1>Interesting Projects</h1>
+            <p></p>
+            <div class="card-deck">
+              <div class="card">
+                <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
+                  <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a>
+                <div id="uni" class="card-body collapse">
+                  <h4 class="card-title">Final Year Project</h4>
+                  <p class="card-text">2019</p>
+                  <p> My final year project was to solve the root cause of unbalanced production flow.
+                    <br>
+                    The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
-                <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a>
-              <div id="uni2" class="card-body collapse">
-                <h4 class="card-title">Facility design project</h4>
-                <p class="card-text">2019</p>
-                <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder
-                  facility.
-                  <p></p>
-                </p>
-                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              <div class="card">
+                <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
+                  <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a>
+                <div id="uni2" class="card-body collapse">
+                  <h4 class="card-title">Facility design project</h4>
+                  <p class="card-text">2019</p>
+                  <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder
+                    facility.
+                    <p></p>
+                  </p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a data-toggle="collapse" href="#uni3" role="button" aria-expanded="false" aria-controls="uni3">
-                <img class="card-img-top" src="images/Sandvik2.jpg" alt="Card image"></a>
-              <div id="uni3" class="card-body collapse">
-                <h4 class="card-title">Gap analysis</h4>
-                <p class="card-text">2018</p>
-                <p> In order to gain working experience, I did a gap analysis of standard operating procedures. 
-                  This project continued for 3 weeks at Sandvik Mining and Rock Technology
-                  <p></p>
-                </p>
-                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              <div class="card">
+                <a data-toggle="collapse" href="#uni3" role="button" aria-expanded="false" aria-controls="uni3">
+                  <img class="card-img-top" src="images/Sandvik2.jpg" alt="Card image"></a>
+                <div id="uni3" class="card-body collapse">
+                  <h4 class="card-title">Gap analysis</h4>
+                  <p class="card-text">2018</p>
+                  <p> In order to gain working experience, I did a gap analysis of standard operating procedures.
+                    This project continued for 3 weeks at Sandvik Mining and Rock Technology
+                    <p></p>
+                  </p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
               </div>
+              <!--<a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
-            <!--<a href="#" class="btn btn-primary">See Profile</a> -->
           </div>
         </div>
-      </div>
       </div>
     </div>
   </div>
