--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href="">View </a> </p>
+                  <p> <a href="files\certificate- css-javascript-big-picture.pdf">View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -262,7 +262,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href=""> View </a> </p>
+                  <p> <a href="files\certificate-Python-The-big-picture.pdf"> View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -282,7 +282,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href=""> View </a> </p>
+                  <p> <a href="files\certificate-Code School-Try SQL.pdf"> View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
